# pgperf

./: .tool-versions  404.html  README.md  README.rst  index.html  long_description.md  mkgendocs.yml  pgperf.code-workspace  pyproject.toml  search.html
docs/: index.md
pgperf/: __init__.py  db.py  main.py  mkdocs.yml  mkgendocs.yml  monitor.py
pgperf/docs/: index.md
pgperf/docs/pgperf/: main.md
pgperf/index/: main.py
pgperf/main/: index.html
pgperf/server/: __init__.py
pgperf/server/additional/: __init__.py
pgperf/server/configuration/: __init__.py
pgperf/server/stats/: __init__.py  collected.py  dinamic.py
pgperf/site/: index.html  search.html
pgperf/site/search/: search_index.json
pgperf/table/: __init__.py  main.py
pgperf/templates/monitor/: pg_stat_ssl.sql  pg_stat_subscription.sql  pg_stat_wal_receiver.sql
pgperf/templates/server/stats/collected/: pg_stat_all_indexes.sql  pg_stat_all_tables.sql  pg_stat_archiver.sql  pg_stat_database_conflicts.sql  pg_stat_sys_indexes.sql  pg_stat_user_indexes.sql  pg_stat_user_tables.sql  pg_stat_xact_all_tables.sql  pg_statio_all_indexes.sql  pg_statio_all_tables.sql  pg_statio_sys_indexes.sql  pg_statio_sys_sequences.sql  pg_statio_sys_tables.sql  pg_statio_user_sequences.sql  pg_statio_user_tables.sql
pgperf/templates/server/stats/dinamic/: pg_stat_activity.sql  pg_stat_replication.sql
search/: search_index.json
src/pgperf/: __init__.py  __version__.py  db.py  main.py  pgperf.py
src/pgperf/index/: __init__.py  main.py
src/pgperf/server/additional/: __init__.py
src/pgperf/server/configuration/: replication.py
src/pgperf/server/stats/: __init__.py  collected.py  dinamic.py
src/pgperf/templates/server/config/: show_all.sql  show_variable.sql
src/pgperf/templates/server/stats/collected/: pg_stat_bgwriter.sql  pg_stat_database.sql  pg_stat_sys_tables.sql  pg_stat_user_functions.sql  pg_stat_xact_sys_tables.sql  pg_stat_xact_user_functions.sql  pg_stat_xact_user_tables.sql  pg_statio_all_sequences.sql  pg_statio_sys_tables.sql  pg_statio_user_indexes.sql
src/pgperf/templates/server/stats/dinamic/: pg_stat_progress_vacuum.sql
tests/: test_pgperf.py  test_pgperf_index.py  test_pgperf_server.py  test_pgperf_server_additional.py  test_pgperf_server_configuration.py  test_pgperf_server_configuration_replication.py  test_pgperf_server_stats_collected.py  test_pgperf_server_stats_dinanic.py  test_pgperf_table.py
