[tool.poetry]
name = "pgperf"
version = "1.0.0"
description = "PostgreSQL Performance Tools"
authors = ["Aldo A. Villagra B. <aldovillagra@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "long_description.md"
homepage = "https://github.com/aldovillagra/pgperf"
repository = "https://github.com/aldovillagra/pgperf"
documentation = "https://github.com/aldovillagra/pgperf#readme"
include = ["README.rst", "LICENSE.txt"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aldovillagra/pgperf/issues"

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = "^2.2.1"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.36"
numpy = "^1.22.4"
psycopg2 = "^2.9.3"
tabulate = "^0.8.9"
Jinja2 = "^3.1.2"
XlsxWriter = "^3.0.3"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
ruff = "^0.0.275"
ipdb = "^0.13.13"
deptry = "^0.12.0"
poethepoet = "^0.20.0"
autopep8 = "^2.0.2"
bpython = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pgperf = 'pgperf.main:app'